services/home-assistant/homeassistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\pitts\src\bin\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: homeassistant
  name: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: homeassistant-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\pitts\src\bin\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: homeassistant-service
    spec:
      containers:
        - image: ghcr.io/home-assistant/home-assistant:stable
          name: homeassistant
          resources: {}
          #securityContext:
          #  privileged: true
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: homeassistant-config-pvc
              mountPath: /config
#            - name: homeassistant-cfgmap
#              mountPath: /config/configuration.yaml
#              subPath: configuration.yaml
#            - name: homeassistant-cfgmap
#              mountPath: /config/groups.yaml
#              subPath: groups.yaml
#            - name: homeassistant-cfgmap
#              mountPath: /config/automations.yaml
#              subPath: automations.yaml
#            - name: homeassistant-cfgmap
#              mountPath: /config/scripts.yaml
#              subPath: scripts.yaml
#            - name: homeassistant-cfgmap
#              mountPath: /config/scenes.yaml
#              subPath: scenes.yaml
      restartPolicy: Always
      volumes:
        - name: homeassistant-config-pvc
          persistentVolumeClaim:
            claimName: homeassistant-config-pvc
        - name: homeassistant-cfgmap
          configMap:
            name: homeassistant-cfgmap
            defaultMode: 0777
status: {}
