services/home-assistant/homeassistant-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  labels:
    app: homeassistant
  annotations:
spec:
  rules:
    - host: "ha.k8s.crossfits.dpitts.us"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-service
                port: 
                  number: 80
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: homeassistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ha.k8s.crossfits.dpitts.us
spec:
  virtualhost:
    fqdn: ha.k8s.crossfits.dpitts.us
  routes:
  - services:
    - name: homeassistant-service
      port: 80
  - conditions:
    - prefix: /
    enableWebsockets: true # Setting this to true enables websocket for all paths that match /websocket
    services:
    - name: homeassistant-service
      port: 80
